--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div id="feverSection" class="hidden">
       <h2 class="header">🤒 Hope you didn’t get 103 Fever !</h2>
       <div class="circle-gallery">
-        <img src="mypic.jpg" alt="img1">
-        <img src="mypic.jpg" alt="img2">
-        <img src="mypic.jpg" alt="img3">
-        <img src="mypic.jpg" alt="img4">
+        <img src="mypic" alt="img1">
+        <img src="mypic." alt="img2">
+        <img src="mypic" alt="img3">
+        <img src="myp" alt="img4">
       </div>
       <button id="lastBtn" class="btn">Last but not least 🎁</button>
     </div>
