--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- Final message -->
-    <div id="finalBar" class="final hidden">🎊 Many Many Happy Returns of the Day! 🎊</div>
+    <div id="finalBar" class="final hidden">🎊 Many Many Happy Returns of the Day! 🎊 ,thanks for supporting me and listening all my sodhi , may god gives u a good husband who is TFI rod katubanisa more gooram than me and he more intrested in conjuring level horror movies ,sare gani ne laga topper avvale ante em cheyalo chepu, last but not least nijalu chedhu ga ne untay but aave nijalu ..entha chepina artham kaka pothey just hell or heaven 😁😏</div>
   </div>
 
   <!-- Sounds -->
